--- a/src/WkHttpTrigger/WkHttpTrigger.fsproj
+++ b/src/WkHttpTrigger/WkHttpTrigger.fsproj
@@ -11,7 +11,7 @@
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.7" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Hello\function.json">
+    <Content Include="WkHttpTrigger\function.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="host.json">
